@@ -265,8 +265,8 @@ def add_imt(fname, imt):
     return os.path.join(os.path.dirname(fname), newname)
 
 
-def export_hcurves_by_imt_csv(key, dest, sitecol, curves_by_imt,
-                              imtls, investigation_time=None):
+def export_hcurves_by_imt_csv(key, kind, rlzs_assoc, fname, sitecol,
+                              curves_by_imt, imtls, investigation_time=None):
     """
     Export the curves of the given realization into CSV.
 
@@ -279,14 +279,19 @@ def export_hcurves_by_imt_csv(key, dest, sitecol, curves_by_imt,
     """
     nsites = len(sitecol)
     fnames = []
+    rlz = rlzs_assoc.get_rlz(kind)
     for imt, imls in imtls.items():
+        comment = ('source_model_tree_path=%s,gsim_tree_path=%s,'
+                   'investigation_time=%s,imt=%s' %
+                   (rlz.sm_lt_path, rlz.gsim_lt_path, investigation_time, imt))
+        dest = add_imt(fname, imt)
         lst = [('lon', F32), ('lat', F32)]
         for iml in imls:
             lst.append((str(iml), F32))
         hcurves = numpy.zeros(nsites, lst)
         for sid, lon, lat in zip(range(nsites), sitecol.lons, sitecol.lats):
             hcurves[sid] = (lon, lat) + tuple(curves_by_imt[sid][imt])
-        fnames.append(write_csv(add_imt(dest, imt), hcurves))
+        fnames.append(write_csv(dest, hcurves, comment=comment))
     return fnames
 
 
@@ -301,9 +306,8 @@ def hazard_curve_name(dstore, ekey, kind, rlzs_assoc):
     prefix = {'hcurves': 'hazard_curve', 'hmaps': 'hazard_map',
               'uhs': 'hazard_uhs'}[key]
     if kind.startswith('rlz-'):
-        rlz_no, suffix = re.match('rlz-(\d+)(.*)', kind).groups()
-        rlz = rlzs_assoc.realizations[int(rlz_no)]
-        fname = dstore.build_fname(prefix + suffix, rlz, fmt)
+        rlz = rlzs_assoc.get_rlz(kind)
+        fname = dstore.build_fname(prefix, rlz, fmt)
     elif kind.startswith('mean'):
         fname = dstore.build_fname(prefix, kind, ekey[1])
     elif kind.startswith('quantile-'):
@@ -342,7 +346,8 @@ def export_hcurves_csv(ekey, dstore):
             if export.from_db:  # called by export_from_db
                 fnames.extend(
                     export_hcurves_by_imt_csv(
-                        ekey, fname, sitecol, hcurves, oq.imtls))
+                        ekey, kind, rlzs_assoc, fname, sitecol, hcurves,
+                        oq.imtls))
             else:  # when exporting directly from the datastore
                 fnames.extend(
                     export_hazard_curves_csv(
